refactor(search): update SearchDialog layout and filter tabs
- Increased the width of the SearchDialog for better usability.
- Replaced the filter tabs with a more structured Grid layout, enhancing the organization of filter options.
- Updated filter tab content to use shorter labels for improved clarity and consistency.

--- a/StormPC/StormPC/Views/Shell/SearchDialog.xaml
+++ b/StormPC/StormPC/Views/Shell/SearchDialog.xaml
@@ -7,7 +7,7 @@
     xmlns:vm="using:StormPC.ViewModels.Shell"
     mc:Ignorable="d">
 
-    <Grid Margin="0,0,0,0" MinWidth="600">
+    <Grid Margin="0,0,0,0" Width="1000">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
@@ -21,45 +21,50 @@
                   Margin="0,0,0,16"/>
 
         <!-- Filter Tabs -->
-        <NavigationView Grid.Row="1" 
-                       Margin="0,0,0,16"
-                       IsBackButtonVisible="Collapsed"
-                       IsSettingsVisible="False"
-                       PaneDisplayMode="Top"
-                       SelectionChanged="OnFilterSelectionChanged">
-            <NavigationView.MenuItems>
-                <NavigationViewItem Content="Tất cả" Tag="All">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71D;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-                <NavigationViewItem Content="Thương hiệu" Tag="Brand">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE719;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-                <NavigationViewItem Content="Danh mục" Tag="Category">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE8FD;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-                <NavigationViewItem Content="Sản phẩm" Tag="Laptop">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE7BF;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-                <NavigationViewItem Content="Đơn hàng" Tag="Order">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE7BF;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-                <NavigationViewItem Content="Khách hàng" Tag="Customer">
-                    <NavigationViewItem.Icon>
-                        <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77B;"/>
-                    </NavigationViewItem.Icon>
-                </NavigationViewItem>
-            </NavigationView.MenuItems>
-        </NavigationView>
+        <Grid Grid.Row="1" Margin="0,0,0,16">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <NavigationView Grid.Column="0"
+                           IsBackButtonVisible="Collapsed"
+                           IsSettingsVisible="False"
+                           PaneDisplayMode="Top"
+                           SelectionChanged="OnFilterSelectionChanged">
+                <NavigationView.MenuItems>
+                    <NavigationViewItem Content="All" Tag="All" IsSelected="True">
+                        <NavigationViewItem.Icon>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE71D;"/>
+                        </NavigationViewItem.Icon>
+                    </NavigationViewItem>
+                    <NavigationViewItem Content="Brand" Tag="Brand">
+                        <NavigationViewItem.Icon>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE719;"/>
+                        </NavigationViewItem.Icon>
+                    </NavigationViewItem>
+                    <NavigationViewItem Content="Cate" Tag="Category">
+                        <NavigationViewItem.Icon>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE8FD;"/>
+                        </NavigationViewItem.Icon>
+                    </NavigationViewItem>
+                    <NavigationViewItem Content="Prod" Tag="Product">
+                        <NavigationViewItem.Icon>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE7BF;"/>
+                        </NavigationViewItem.Icon>
+                    </NavigationViewItem>
+                    <NavigationViewItem Content="Order" Tag="Order">
+                        <NavigationViewItem.Icon>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE7BF;"/>
+                        </NavigationViewItem.Icon>
+                    </NavigationViewItem>
+                    <NavigationViewItem Content="Cust" Tag="Customer">
+                        <NavigationViewItem.Icon>
+                            <FontIcon FontFamily="Segoe MDL2 Assets" Glyph="&#xE77B;"/>
+                        </NavigationViewItem.Icon>
+                    </NavigationViewItem>
+                </NavigationView.MenuItems>
+            </NavigationView>
+        </Grid>
 
         <!-- Results List -->
         <ListView Grid.Row="2" 
